# UAV

./: .env.example  .gitignore  .replit  AUDIT.md  access.py  automation.py  bot.py  db.py  deploy.py  env  fetcher_keep_alive_remote.py  fetcher_main_remote.py  guide.py  keep_alive.py  proxy_scraper.py  push.py  pyproject.toml  replit.nix  requirements.txt  setup.sh  tor_manager.py  userdata.sh
attached_assets/: Pasted--goal-Perform-deep-analysis-of-the-Telegram-bot-codebas_1774280794936.txt  Pasted--json-id-q2k9zf-role-system-content-You-are-an-elite-le_1777806108847.txt  Pasted--json-role-Replit-Agent-Access-Control-Redeemable-Code-_1776526806101.txt  Pasted--json-role-Replit-Agent-Complete-A-to-Z-Bot-Guide-Creat_1776524464214.txt  Pasted--json-role-Replit-Agent-Full-Telegram-Bot-Audit-Fix-pri_1776523334163.txt  Pasted--json-role-Replit-Agent-Implement-ENH-002-Premium-Inlin_1776524081871.txt  Pasted--json-role-Replit-Agent-Persistent-Reply-Keyboard-Botto_1776530948813.txt  Pasted--json-role-Replit-Agent-Premium-Help-Message-Redesign-p_1776524216030.txt  Pasted--json-role-Replit-Agent-Telegram-Bot-Enhancement-Adviso_1776523577145.txt  Pasted--json-role-Replit-Anthropic-Agent-Bot-Command-Stats-Fix_1776522361868.txt  Pasted--json-role-system-content-You-are-a-senior-software-eng_1774640160580.txt  Pasted--json-task-Debug-fix-recurring-error-in-Telegram-bot-by_1776516365566.txt  Pasted--json-task-Fix-MessageMediaUnsupported-error-in-Pyrogra_1776515747131.txt  Pasted--rename-telegram-bot-userdata-sh-userdata-sh-99-Mar-18-_1773857785109.txt  (+7 more)
fetcher_new/: _patch_contact.py  (+9 more)
(+3 files in other folders)
